plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.11'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.team.meongnyang'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// Spring Boot Core
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-aop'

	// Security & JWT (팀원 A)
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'

	// Redis (팀원 B — 캐싱)
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	// PostGIS — Hibernate Spatial (팀원 B — 공간 쿼리)
	implementation 'org.hibernate.orm:hibernate-spatial'

	// Swagger / OpenAPI (전체 — API 문서 자동화)
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.6'

	// Jsoup (웹 파싱/크롤링)
	implementation 'org.jsoup:jsoup:1.17.2'

	// Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// Database
	runtimeOnly 'org.postgresql:postgresql'

	// .env 파일 자동 로드
	implementation 'me.paulschwarz:spring-dotenv:3.0.0'

	// Spring Mail (아이디 찾기 / 임시 비밀번호 발송)
	implementation 'org.springframework.boot:spring-boot-starter-mail'

	// Dev & Test
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// Env
	implementation 'me.paulschwarz:spring-dotenv:4.0.0'

	// PDF 문서 추출(필요할 때만 유지해도 됨)
	implementation 'org.springframework.ai:spring-ai-tika-document-reader'

	// Ai
	implementation 'org.springframework.ai:spring-ai-starter-model-google-genai'
	implementation 'org.springframework.ai:spring-ai-starter-model-google-genai-embedding'
	implementation 'org.springframework.ai:spring-ai-starter-vector-store-pgvector'
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.ai:spring-ai-bom:1.1.2"
	}
}

tasks.named('test') {
	useJUnitPlatform()
}
